# StriMD

./: Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
changelogs/: 0.2.md  1.0.0.md
docs/: API.md  CRATE_SPLIT_SPIKE.md  LEGACY_REMOVAL_GATE.md  MIGRATION.md  README_HEADLESS.md
examples/: README.md  _debug_hello_blocks.rs  egui_pipeline_harness.rs  egui_table_harness.rs  hello.rs  image.rs  large_readme.rs  live_edit.rs  llm_chat.rs  math_mermaid.rs  profile_llm_chat.rs  profile_static_mark.rs  static_export.rs  stream_chat.rs  styling.rs  test.sh
examples/assets/: MPF.md  QL_README.md  TEST.md
examples/fixtures/: styling.md
examples/shared/: chat_stream.rs  egui_ui.rs  harness_checks.rs  image_loader.rs  openai_compat.rs  profiling.rs
scripts/: verify-all-features.sh  verify-egui-harness.sh  verify-features.sh
src/: comrak.rs  document.rs  lib.rs  options.rs  profile.rs  renderer.rs  state.rs  structs.rs
src/backends/: mod.rs
src/backends/iced/: code_fence.rs  dom.rs  legacy_document.rs  mod.rs  renderer.rs  state.rs  structs.rs  style.rs  widgets.rs
src/backends/iced/renderer/: ruby.rs  table.rs
src/core/: block.rs  document.rs  error.rs  ids.rs  mod.rs  stream_document.rs
src/html/: block_alignment.rs  block_cache.rs  fragment.rs  mod.rs  preprocess.rs  rcdom_compat.rs  sanitize.rs  tagfilter.rs  treesink.rs  writer.rs
src/parse/: comrak_migration.rs  content.rs  diagnostics.rs  gfm_preprocess.rs  legacy_fallback.rs  mod.rs  pulldown.rs  wrapper_coalesce.rs
src/render/: mermaid.rs  mod.rs  ratex.rs  svg_util.rs
tests/: downstream_static.rs  downstream_stream.rs  egui_harness.rs  gfm_conformance.rs  html_fragment_parity.rs  iced_regression.rs  math_mermaid.rs  static_parity.rs  stream_parity.rs  styling_example.rs
tests/fixtures/: gfm_tagfilter.md  gfm_tasks.md  gfm_wikilink.md  math_display.md  math_inline.md  mermaid_flow.md  raw_details.md  stream_table.md
