[package]
name = "strimd"
version = "1.0.0-dev"
edition = "2024"
authors = [
    "Mrmayman <navneetkrishna22@gmail.com>",
    "FerrisMind <ferrismindrust@outlook.com>",
]
description = "StriMD — HTML/Markdown renderer for iced with headless static and streaming modes"
license = "Apache-2.0"
repository = "https://github.com/FerrisMind/strimd"
documentation = "https://docs.rs/strimd"
readme = "README.md"
keywords = ["gui", "iced", "markdown", "html", "renderer", "strimd", "streaming"]
categories = ["gui"]

[dependencies]
bitflags = "2"
pulldown-cmark = "0.13"

# Minimal iced surface (no iced defaults): renderers, executor, widgets for MarkWidget.
# x11 / wayland are wired through `_iced_backend`.
iced = { version = "0.14", optional = true, default-features = false, features = [
    "advanced",
    "wgpu",
    "tiny-skia",
    "thread-pool",
    "markdown",
    "highlighter",
] }
html5ever = { version = "0.36", optional = true }
markup5ever_rcdom = { version = "0.36", optional = true }
lol_html = { version = "2", optional = true }
mdstream = { path = "../mdstream/mdstream", optional = true }
ratex-parser = { path = "../RaTeX/crates/ratex-parser", optional = true }
ratex-layout = { path = "../RaTeX/crates/ratex-layout", optional = true }
ratex-svg = { path = "../RaTeX/crates/ratex-svg", optional = true, features = [
    "standalone",
    "embed-fonts",
] }
mermaid-rs-renderer = { path = "../mermaid-rs-renderer", default-features = false, optional = true }

[dev-dependencies]
open = "5"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
resvg = "0.45"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
egui = "0.29"

[features]
default = ["_iced_backend"]

# Supported public features (stable contract)
no_iced = []
stream = ["dep:mdstream", "mdstream/pulldown"]
static = ["dep:html5ever"]

# Implementation-detail features (unsupported for downstream use)
math = [
    "dep:ratex-parser",
    "dep:ratex-layout",
    "dep:ratex-svg",
]
mermaid = ["dep:mermaid-rs-renderer"]
_iced_backend = [
    "dep:iced",
    "dep:html5ever",
    "static",
    "iced/x11",
    "iced/wayland",
    "iced/svg",
    "math",
    "mermaid",
]
_html_preprocess = ["dep:lol_html"]
_rcdom_compat = ["dep:markup5ever_rcdom"]

# Backward-compatible aliases (pulldown-only; comrak removed in 1.0)
markdown = ["static"]
iced-wgpu = ["iced/wgpu"]
iced-tiny-skia = ["iced/tiny-skia"]
iced-tokio = ["iced/tokio"]
iced-wayland = ["iced/wayland"]
iced-windowing = ["iced/x11", "iced/wayland"]

[[example]]
name = "hello"
required-features = ["_iced_backend"]

[[example]]
name = "styling"
required-features = ["_iced_backend"]

[[example]]
name = "live_edit"
required-features = ["_iced_backend"]

[[example]]
name = "image"
required-features = ["_iced_backend", "iced/image", "iced/tokio"]

[[example]]
name = "large_readme"
required-features = ["_iced_backend", "iced/image", "iced/tokio", "iced/svg"]

[[example]]
name = "static_export"
required-features = ["no_iced", "static"]

[[example]]
name = "stream_chat"
required-features = ["no_iced", "stream"]

[[example]]
name = "egui_table_harness"
required-features = ["no_iced", "static", "stream"]

[[example]]
name = "egui_pipeline_harness"
required-features = ["no_iced", "static", "stream"]

[[example]]
name = "llm_chat"
required-features = ["_iced_backend", "stream", "iced/tokio"]

[[example]]
name = "math_mermaid"
required-features = ["_iced_backend", "math", "mermaid"]
